# codexer

./: README.md  pyproject.toml
docs/: codex-sessions.md
src/codexer/: __init__.py  __main__.py  browser.py
