[project]
name = "codexer"
version = "0.1.1"
description = "Interactive TUI for exploring coding-assistant session logs."
readme = "README.md"
authors = [
    { name = "Andy Lee", email = "andylizf@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=14.1.0",
    "textual>=6.1.0",
]

[project.scripts]
codexer = "codexer:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
